UI: Force minimap width (prevents it getting squashed) - fixes #1529
rn=

(integrated from master branch change 9.2.1-1688-g825c17d by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -589,6 +589,7 @@ vbox[anonid="quickstart"] .inner > button
 minimap
 {
   width: 200px;
+  min-width: 200px;
   max-width: 200px;
   border-left: 1px solid @border;
 }
